--- a/3TDS/package.json
+++ b/3TDS/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@react-navigation/drawer": "^7.5.7",
+    "@react-navigation/native-stack": "^7.3.25",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
@@ -19,6 +20,7 @@
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.20.0",
     "react-native-worklets": "^0.4.1"
   },
