--- a/3TDS/package.json
+++ b/3TDS/package.json
@@ -14,6 +14,10 @@
     "@react-navigation/drawer": "^7.5.7",
     "@react-navigation/native-stack": "^7.3.25",
     "expo": "~53.0.20",
+    "expo-camera": "~16.1.11",
+    "expo-location": "~18.1.6",
+    "expo-network": "~7.1.5",
+    "expo-sensors": "~14.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -25,7 +29,8 @@
     "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "expo-module-scripts": "^4.1.10"
   },
   "private": true
 }
